# sewedy-support-bot

./: .dockerignore  .env.example  .gitignore  App.jsx  CLAUDE.md  DESIGN.md  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  auth.py  db.py  email_utils.py  embedding_map.py  llm.py  main.py  security.py
config/: rag.yaml
data/: cases_clean.jsonl  review_queue.jsonl  support_cases.csv
eval/: eval_retriever.py  eval_set_public.json
presentation/: DECK.md  SLIDES.md  build_deck.py  capture_screenshots.mjs  render_terminal.py
presentation/screenshots/: README.md
src/rag/: config.py  embeddings.py  index.py  ingest.py  retrieve.py
supportbot-ui/: index.html  package-lock.json  package.json
supportbot-ui/src/: App.jsx  index.css
tests/: test_backend.py  test_ingest.py  test_retrieve.py
tools/: make_dark_logo.py
