[project]
name = "intern-rag"
version = "0.1.0"
description = "Instructor RAG SupportBot - device support case retrieval"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
azure = ["openai>=1.40", "python-dotenv>=1.0"]
ui = ["streamlit>=1.37"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]