[project]
name = "intern-rag"
version = "0.1.0"
description = "Instructor RAG SupportBot - device support case retrieval"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.7",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlmodel>=0.0.39",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "google-genai>=2.10.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
azure = ["openai>=1.40", "python-dotenv>=1.0"]
ui = ["streamlit>=1.37"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can import the `backend` package
# (the `rag` package is already importable as an installed src-layout package).
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]
